--- a/s4_data_test_drive/pom.xml
+++ b/s4_data_test_drive/pom.xml
@@ -37,6 +37,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.6</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
